--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,5 +1,5 @@
-# FROM node:16.14-alpine
-# WORKDIR /app-backend
-#  ...
-
-# iniciando o projeto//
+FROM node:16.14-alpine
+WORKDIR /app-backend
+COPY . .
+RUN npm install
+CMD ["npm", "run", "dev"]
